--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -3,15 +3,29 @@
         "browser": true,
         "es2021": true
     },
-    "extends": [
-        "google"
-    ],
+    "extends": "eslint:recommended",
     "parserOptions": {
         "ecmaVersion": 6
     },
     "rules": {
-        "linebreak-style":"off",
-        "max-len":"off",
-        "new-cap": "off"
+        "indent": [
+            "error",
+            2
+        ],
+        "linebreak-style": [
+            "error",
+            "windows"
+        ],
+        "quotes": [
+            "warn",
+            "double"
+        ],
+        "semi": [
+            "error",
+            "always"
+        ]
+    },
+    "globals": {
+        "Colorful": "readonly"
     }
 }
